# amx_notification

./: .gitignore  Makefile  properties.py  properties.yaml  pyproject.toml
app/: main.py  notification.py
db/: __init__.py  config.py  models.py
